setup datepicker for games results and fix styles for overflow

--- a/src/components/GamesResult/GamesResult.css
+++ b/src/components/GamesResult/GamesResult.css
@@ -2,8 +2,29 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    height: fit-content;
 }
 
 .games-result-container li {
+    padding-left: 1rem;
+    padding-right: 1rem;
     border-top: 1px solid var(--border-color);
+}
+
+.title-container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.title-container input {
+    font: inherit;
+    margin-left: 1rem;
+    padding-right: 0.25rem;
+    padding-left: 0.25rem;
+}
+
+.title-container input::-webkit-calendar-picker-indicator {
+    font-size: 1rem;
+    cursor: pointer;
+    margin-left: -1rem;
 }
