--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,12 @@ a {
 }
 
 .layout-container {
-    overflow: scroll;
-    padding: 2rem 4rem 0 4rem;
+    padding: 2rem 4rem 2rem 4rem;
 }
 
 @media only screen and (max-width: 992px) {
     .layout-container {
-        padding: 1rem 1rem 0 1rem;
+        padding: 1rem;
     }
 }
 
@@ -64,6 +63,10 @@ button {
 
 input {
     font-family: inherit;
+}
+
+table {
+    margin-bottom: 1rem;
 }
 
 table,
@@ -93,4 +96,15 @@ th:nth-child(even) {
 
 .border-container {
     border: 1px solid var(--border-color);
+}
+
+.home-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media only screen and (max-width: 600px) {
+    .home-container {
+        flex-direction: column;
+    }
 }
